--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <!-- Metadatos -->
     <meta charset="utf-8">
-    <meta name="author" content="Jane Doe">
-    <meta name="description" content="Portafolio de desarrollo web de Jane Doe">
+    <meta name="author" content="Monserrat">
+    <meta name="description" content="Portafolio de desarrollo web de Monserrat G">
     <meta name="keywords" content="HTML, CSS, JavaScript, React">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Titulo -->
@@ -54,7 +54,7 @@
     <!-- Seccion Hero -->
     <section class="hero align-items-stretch">
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/avatar.png" alt="Foto de Monserrat">
+        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/avatar.png" alt="Foto animada de Monserrat">
         <h1>Hola, Soy Monserrat García</h1>
         <!--<h2>Desarrollo sitios web y escribo artículos sobre programación.</h2>-->
 
@@ -121,7 +121,7 @@
 
     <!-- Proyectos -->
     <section id="proyectos" class="proyectos-recientes seccion-clara d-flex flex-column">
-      <h2 class="seccion-titulo texto-negro">Mis proyectos recientes</h2>
+      <h2 class="seccion-titulo texto-negro">Mis proyectos</h2>
       <!-- ANIMACION -->
       <h2 class="text-primary mb-4 typewriter" id="typewriter2"></h2>
 
@@ -135,10 +135,10 @@
               <div class="overlay">
                 <p>Proyecto 1</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/monseaz/PPweb.git" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#" target="_blank" rel="noopener noreferrer">
+                  <a href="https://mippweb.netlify.app" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -152,10 +152,10 @@
               <div class="overlay">
                 <p>Proyecto 2</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/monseaz/googleclone.git" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://cdgoogle.netlify.app" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -169,10 +169,10 @@
               <div class="overlay">
                 <p>Proyecto 3</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/monseaz/practBootstrap.git" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://practbootstrap.netlify.app" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -186,10 +186,10 @@
               <div class="overlay">
                 <p>Proyecto 4</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/monseaz/portafolio.git" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#" target="_blank" rel="noopener noreferrer">
+                  <a href="https://mgnportafolio.netlify.app" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -232,43 +232,49 @@
           </div>-->
         </div>
       </div>
-      <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+      <!-- <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
         <button type="button" class="btn btn-primary">
           Ver más proyectos
           <i class="bi bi-caret-right-fill"></i>
         </button>
-      </a>
+      </a> -->
+    </section>
+
+    <!-- SEPARACION IMG MANDALA -->
+    <section id="sec" class="sec colors">
+      <div class="conte">
+      </div>
     </section>
 
     <!-- Testimonios -->
     <section id="testimonios" class="testimonios seccion-clara">
       <h2 class="seccion-titulo">Testimonios</h2>
-      <h3 class="seccion-descripcion">Estos son algunos testimonios de mis clientes...</h3>
+      <h2 class="text-primary mb-4 typewriter" id="typewriter3"></h2>
       
       <!-- Carrusel -->
       <div id="testimonios-carrusel" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="container">
-              <img class="testimonio-imagen rounded-circle" src="imagenes/cliente1.svg" alt="Foto de Gino">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <img class="testimonio-imagen rounded-circle" src="imagenes/test2.png" alt="Foto animada de Ebe">
+              <p class="testimonio-texto">Trabajar con Monse ha sido una experiencia muy positiva, demuestra una capacidad excepcional para trabajar en equipo, siempre colaborando y aportando ideas valiosas</p>
               <div class="testimonio-info">
-                <p class="cliente">Gino</p>
-                <p class="cargo">Gerente de proyectos en DesarrolloWeb</p>
+                <p class="cliente">Ebe</p>
+                <p class="cargo">QA Tester</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
-              <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg" alt="Foto de Nora">
-              <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
+              <img class="testimonio-imagen rounded-circle" src="imagenes/test1.png" alt="Foto animada de Brayan">
+              <p class="testimonio-texto">Su actitud positiva y disposición para ayudar a los demás la convierten en una compañera de trabajo admirable, recomiendo altamente a Monse por su profesionalismo.</p>
               <div class="testimonio-info">
-                <p class="cliente">Nora</p>
-                <p class="cargo">Gerente de DiseñaMiPáginaWeb</p>
+                <p class="cliente">Brayan</p>
+                <p class="cargo">Analista de Sistemas</p>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <div class="container">
               <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg" alt="Foto de Leonardo">
               <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
@@ -277,7 +283,7 @@
                 <p class="cargo">Director de AprendeAProgramar</p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#testimonios-carrusel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -297,22 +303,22 @@
           <div class="row">
             <!-- Eliminamos los elementos existentes y agregamos las imágenes -->
             <div class="col-6 col-md-2">
-              <img src="imagenes/html.png" alt="Imagen 1">
+              <img class="tamaño" src="imagenes/html.png" alt="Imagen 1">
             </div>
             <div class="col-6 col-md-2">
-              <img src="imagenes/css.png" alt="Imagen 2">
+              <img class="tamaño" src="imagenes/css.png" alt="Imagen 2">
             </div>
             <div class="col-6 col-md-2">
-              <img src="imagenes/js.png" alt="Imagen 3">
+              <img class="tamaño" src="imagenes/js.png" alt="Imagen 3">
             </div>
             <div class="col-6 col-md-2">
-              <img src="imagenes/boot.png" alt="Imagen 4">
+              <img class="tamaño" src="imagenes/boot.png" alt="Imagen 4">
             </div>
             <div class="col-6 col-md-2">
-              <img src="imagenes/git.png" alt="Imagen 5">
+              <img class="tamaño" src="imagenes/git.png" alt="Imagen 5">
             </div>
             <div class="col-6 col-md-2">
-              <img src="imagenes/visual.png" alt="Imagen 6">
+              <img class="tamaño" src="imagenes/visual.png" alt="Imagen 6">
             </div>
           </div>
         </div>
@@ -345,21 +351,21 @@
     <!-- Pie de pagina (footer) -->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center"> 
       <img class="footer-logo" src="imagenes/icono-negro.png" alt="Logo del portafolio">
-      <p class="footer-texto text-center">Explorando nuevas tecnologías y soluciones.<br><br>"El éxito no es la clave de la felicidad. La felicidad es la clave del éxito. Si amas lo que haces, tendrás éxito." - Albert Schweitzer</p>
+      <p class="footer-texto text-center">Explorando nuevas tecnologías y soluciones.<br><br>"El éxito no es la clave de la felicidad. La felicidad es la clave del éxito. Si amas lo que haces, tendrás éxito." - Albert Schweitzer<br><br>Contacto</p>
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
         <!-- <a href="#" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-twitter"></i>
         </a> -->
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/monseaz" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/monserrat-garc%C3%ADa-4ab47130b" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
         <!-- <a href="#" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-instagram"></i> -->
         </a>
-        <a href="mailto:janedoe@micorreo.com" target="_blank" rel="noopener noreferrer">
+        <a href="mailto:gmonse.cc@gmail.com" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-envelope"></i>
         </a>
       </div>
